--- a/Clientes/Apps/Android/ommfcm/app/src/main/res/values/strings.xml
+++ b/Clientes/Apps/Android/ommfcm/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="title_activity_actividad_formulario">ActividadFormulario</string>
     <string name="title_activity_actividad_confirmacion">ActividadConfirmacion</string>
     <string name="title_activity_actividad_vista_previa">ActividadVistaPrevia</string>
+    <string name="btn_tomar_foto">Tomar foto de la camara</string>
+    <string name="btn_escoger_imagen">Escoger foto de mi galeria</string>
+    <string name="btn_detalles">Ver instrucciones</string>
 </resources>
