--- a/Clientes/Apps/Android/ommfcm/app/src/main/res/values/strings.xml
+++ b/Clientes/Apps/Android/ommfcm/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="btn_tomar_foto">Tomar foto de la camara</string>
     <string name="btn_escoger_imagen">Escoger foto de mi galeria</string>
     <string name="btn_detalles">Ver instrucciones</string>
+    <string name="btn_subir_incidente">Subir incidente</string>
 </resources>
